@@ -27,6 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+23-Oct-2009 Andrew Eddie
+ ^ Fixed new registered type in User Options to be able to select any group.
+ ^ Added check to group delete to ensure that Public and Registered can't be removed.
+ # Fixed bug in com_users registration controller.
+
 23-Oct-2009 Ron Severdia
 ^ Removed Austere template
 
